name:                write-yourself-scheme
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/chronologos/write-yourself-scheme#readme
license:             BSD3
license-file:        LICENSE
author:              Ian Tay
maintainer:          yiyantay@gmail.com
copyright:           2017 Ian Tay
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parse, Repl, Primitives, Error, Types
  build-depends:       base
                     , parsec
                     , mtl
  default-language:    Haskell2010

executable write-yourself-scheme-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , write-yourself-scheme
  default-language:    Haskell2010

test-suite write-yourself-scheme-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , write-yourself-scheme
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chronologos/write-yourself-scheme
